// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddToCartSelector component should render correctly with only required props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 1,
      },
      Object {
        "flexGrow": 1,
      },
    ]
  }
>
  <QuantitySelector
    allowZero={false}
    disableDelete={true}
    onInputFocus={undefined}
    onToggleSelectors={[Function]}
    onUpdateQuantity={undefined}
    quantity={22}
    style={
      Object {
        "marginRight": 1,
        "width": 44,
      }
    }
    theme="primary"
  />
  <AddToCartButton
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    text="Add To Cart"
  />
</View>
`;

exports[`AddToCartSelector component should render with hidden quantity selector 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 1,
      },
      Object {
        "flexGrow": 1,
      },
    ]
  }
>
  <AddToCartButton
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    text="Add To Cart"
  />
</View>
`;

exports[`AddToCartSelector component should render with onInputFocus prop 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 1,
      },
      Object {
        "flexGrow": 1,
      },
    ]
  }
>
  <QuantitySelector
    allowZero={false}
    disableDelete={true}
    onInputFocus={[Function]}
    onToggleSelectors={[Function]}
    onUpdateQuantity={undefined}
    quantity={22}
    style={
      Object {
        "marginRight": 1,
        "width": 44,
      }
    }
    theme="primary"
  />
  <AddToCartButton
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    text="Add To Cart"
  />
</View>
`;

exports[`AddToCartSelector component should render with onUpdateQuantity function 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 1,
      },
      Object {
        "flexGrow": 1,
      },
    ]
  }
>
  <QuantitySelector
    allowZero={false}
    disableDelete={true}
    onInputFocus={undefined}
    onToggleSelectors={[Function]}
    onUpdateQuantity={[Function]}
    quantity={22}
    style={
      Object {
        "marginRight": 1,
        "width": 44,
      }
    }
    theme="primary"
  />
  <AddToCartButton
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    text="Add To Cart"
  />
</View>
`;

exports[`AddToCartSelector component should render with productComposite prop 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 1,
      },
      Object {
        "flexGrow": 1,
      },
    ]
  }
>
  <QuantitySelector
    allowZero={false}
    disableDelete={true}
    onInputFocus={undefined}
    onToggleSelectors={[Function]}
    onUpdateQuantity={undefined}
    quantity={22}
    style={
      Object {
        "marginRight": 1,
        "width": 44,
      }
    }
    theme="primary"
  />
  <AddToCartButton
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    text="Add To Cart"
  />
</View>
`;

exports[`AddToCartSelector component should render with selectedFinish prop 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 1,
      },
      Object {
        "flexGrow": 1,
      },
    ]
  }
>
  <QuantitySelector
    allowZero={false}
    disableDelete={true}
    onInputFocus={undefined}
    onToggleSelectors={[Function]}
    onUpdateQuantity={undefined}
    quantity={22}
    style={
      Object {
        "marginRight": 1,
        "width": 44,
      }
    }
    theme="primary"
  />
  <AddToCartButton
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    text="Add To Cart"
  />
</View>
`;

exports[`AddToCartSelector component should render with validateAvailability prop 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 1,
      },
      Object {
        "flexGrow": 1,
      },
    ]
  }
>
  <QuantitySelector
    allowZero={false}
    disableDelete={true}
    onInputFocus={undefined}
    onToggleSelectors={[Function]}
    onUpdateQuantity={undefined}
    quantity={22}
    style={
      Object {
        "marginRight": 1,
        "width": 44,
      }
    }
    theme="primary"
  />
  <AddToCartButton
    disabled={false}
    onPress={[Function]}
    style={
      Object {
        "flexGrow": 1,
      }
    }
    text="Add To Cart"
  />
</View>
`;
